--- a/products/locale/fa/LC_MESSAGES/django.po
+++ b/products/locale/fa/LC_MESSAGES/django.po
@@ -8,14 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-24 23:35+0330\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2022-12-31 13:03+0330\n"
+"PO-Revision-Date: 2022-12-31 13:05+0330\n"
+"Last-Translator:   <AA@aa.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Translated-Using: django-rosetta 0.9.8\n"
 
 #: .\models.py:29
 msgid "Very Bad"
@@ -45,14 +46,26 @@ msgstr "متن نظر"
 msgid "Score"
 msgstr "امتیاز"
 
-#: .\templates\products\product_detail.html:51
+#: .\templates\products\product_detail.html:53
 msgid "Add To Card"
 msgstr "اضافه کردن به سبد خرید"
 
-#: .\templates\products\product_detail.html:71
+#: .\templates\products\product_detail.html:75
 msgid "Product Description"
 msgstr "توضیحات محصول"
 
-#: .\templates\products\product_detail.html:159
+#: .\templates\products\product_detail.html:166
 msgid "Submit"
 msgstr "ارسال"
+
+#: .\templates\products\product_detail.html:170
+msgid "To Write Your Comment Please"
+msgstr "برای نوشتن نظر لطفا وارد"
+
+#: .\templates\products\product_detail.html:171
+msgid "LogIn"
+msgstr " ناحیه کاربری "
+
+#: .\views.py:36
+msgid "Comment Successfully Created"
+msgstr "نظر شما با موفقیت ثبت شد ."
